--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "request-promise": "^4.2.6",
     "sync-request": "^6.1.0",
     "wechat-public-nodejs": "^0.1.1"
   }
